[package]
name = "raytracer"
version = "1.4.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
derivative = "2"
image = { version = "0.24", default-features = false, features = ["pnm"] }
lazy_static = "1"
evalexpr = "11"
ordered-float = "3"
parking_lot = { version = "0.12", default-features = false }
rand = "0.8"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_plain = "1"
serde_yaml = "0.9"
slotmap = "1"
wavefront = "0.2"

[profile.release]
lto = true
